--- a/plugins/vfs-connections/ui/src/main/resources-filtered/app/index.html
+++ b/plugins/vfs-connections/ui/src/main/resources-filtered/app/index.html
@@ -82,6 +82,6 @@
       });
     })();
   </script>
-  <vfs-connections-app></vfs-connections-app>
+  <div ui-view class="transition"></div>
 </body>
 </html>
