[BACKLOG-31207] Select files

--- a/plugins/file-open-save-new/core/src/main/javascript/app/app.html
+++ b/plugins/file-open-save-new/core/src/main/javascript/app/app.html
@@ -85,9 +85,11 @@
       state="vm.state"
       path="vm.folder.path"
       filename="vm.fileToSave"
+      myselectedfile="vm.myfile"
+      filetypes="vm.filetypes"
       on-open-click="vm.onOpenClick()"
       on-select-filter="vm.onSelectFilter(filter)"
-      on-ok-click="vm.onOKClick()"
+      on-ok-click="vm.onOkClick()"
       on-save-click="vm.onSaveClick()"
       on-cancel-click="vm.onCancelClick()"
   ></filebar>
