[BACKLOG-31207] Select File Updates

--- a/plugins/file-open-save-new/core/src/main/javascript/app/app.html
+++ b/plugins/file-open-save-new/core/src/main/javascript/app/app.html
@@ -85,11 +85,10 @@
       state="vm.state"
       path="vm.folder.path"
       filename="vm.fileToSave"
-      myselectedfile="vm.myfile"
-      filetypes="vm.filetypes"
-      on-open-click="vm.onOpenClick()"
+      selected-file="vm.myfile"
+      file-types="vm.fileTypes"
       on-select-filter="vm.onSelectFilter(filter)"
-      on-ok-click="vm.onOkClick()"
+      on-open-click="vm.onOpenClick()"
       on-save-click="vm.onSaveClick()"
       on-cancel-click="vm.onCancelClick()"
   ></filebar>
